refactor: WaitingJobs 로직 분리